コンテンツの追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <p>Coming Soon...</p>
+    <div>
+      <img src="img/ymgn.jpg" alt="ﾔﾏｹﾞﾝのアイコン" class="icon">
+      <p class="name">ﾔﾏｹﾞﾝ</p>
+      <p class="discription">豊田高専情報工学科3年のひよこ<br/></p>
+      <p class="discription">スキル: Swift4 Xcode iOSアプリ開発 / C# Xamarin / Python3 深層学習 / C 自作OS / JavaScript Node.js<br /></p>
+      <p class="discription">経歴: 全国高専プログラミングコンテスト 28回自由部門　企業賞、NICT賞 29回課題部門　企業賞 / 起業家甲子園 全国大会出場 / セキュリティ・キャンプ2018 全国大会参加</p>
+    </div>
   </body>
 </html>
