--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>はじめてのﾔﾏｹﾞﾝ</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <!-- UIkit JS -->
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
   </head>
   <body>
-    <div>
-      <img src="img/ymgn.jpg" alt="ﾔﾏｹﾞﾝのアイコン" class="icon">
-      <p class="name">ﾔﾏｹﾞﾝ</p>
-      <p class="discription">豊田高専情報工学科3年のひよこ<br/></p>
-      <p class="discription">スキル: Swift4 Xcode iOSアプリ開発 / C# Xamarin / Python3 深層学習 / C 自作OS / JavaScript Node.js<br /></p>
-      <p class="discription">経歴: 全国高専プログラミングコンテスト 28回自由部門　企業賞、NICT賞 29回課題部門　企業賞 / 起業家甲子園 全国大会出場 / セキュリティ・キャンプ2018 全国大会参加</p>
+    <div class="uk-padding">
+      <div class="uk-card uk-card-large uk-card-default uk-card-body uk-width-1-1@m">
+        <div class="uk-height-medium uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="img/bg.jpg" uk-img>
+          <div class="uk-text-center">
+            <h1 class="uk-text-center uk-text-bold">工事中</h1>
+            <div uk-spinner></div>
+          </div>
+          <img class="uk-align-center" src="img/mark_koujichu.png" height="200" width="200" alt="">
+        </div>
+      </div>
     </div>
+    
+    
   </body>
 </html>
