--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>はじめてのﾔﾏｹﾞﾝ</title>
+    <title>ﾔﾏｹﾞﾝのポートフォリオ</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="css/uikit.min.css" />
     <!-- UIkit JS -->
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="img/icon-192x192.png">
   </head>
   <body>
     <!-- <div class="uk-padding">
