アイコンを丸に変更

--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
     <link rel="icon" type="image/png" href="img/icon-192x192.png">
   </head>
   <body>
-    <!-- <div class="uk-padding">
-      <div class="uk-card uk-card-large uk-card-default uk-card-body uk-width-1-1@m">
-        <div class="uk-height-medium uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="img/bg.jpg" uk-img>
-          <div class="uk-text-center">
-            <h1 class="uk-text-center uk-text-bold">工事中</h1>
-            <div uk-spinner></div>
-          </div>
-          <img class="uk-align-center" src="img/mark_koujichu.png" height="200" width="200" alt="">
-        </div>
-      </div>
-    </div> -->
     <nav class="uk-navbar-container" uk-navbar  >
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
@@ -55,10 +44,10 @@
           
         </article>
         <div class="uk-flex uk-flex-center uk-flex-middle">
-          <a href="https://twitter.com/ymgn_bass" target="_blank" uk-icon="twitter"></a>
-          <a href="https://github.com/yamagn" target="_blank" uk-icon="github" class="uk-margin-left"></a>
-          <a href="https://www.facebook.com/KenyaYamamoto0620" target="_blank" uk-icon="facebook" class="uk-margin-left"></a>
-          <a href="https://www.instagram.com/ymgnittc/" target="_blank" uk-icon="instagram" class="uk-margin-left"></a>
+          <a href="https://twitter.com/ymgn_bass" target="_blank" uk-icon="twitter" class="uk-icon-button"></a>
+          <a href="https://github.com/yamagn" target="_blank" uk-icon="github" class="uk-margin-left uk-icon-button"></a>
+          <a href="https://www.facebook.com/KenyaYamamoto0620" target="_blank" uk-icon="facebook" class="uk-margin-left uk-icon-button"></a>
+          <a href="https://www.instagram.com/ymgnittc/" target="_blank" uk-icon="instagram" class="uk-margin-left uk-icon-button"></a>
         </div>
       </div>
     </div>
