--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="img/icon-192x192.png">
   </head>
   <body>
-    <nav class="uk-navbar-container" uk-navbar  >
+    <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li>
@@ -69,8 +69,8 @@
         <h2 class="uk-heading-line uk-text-center uk-padding-large"><span>Will Be</span></h2>
       <!-- これからのこと -->
     </div>
-    <footer>
-
+    <footer class="uk-background-muted uk-text-center uk-padding-large">
+      <p>powered by <span uk-icon="uikit"></span>UIKit3</p>
     </footer>
   </body>
 </html>
