--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <script src="js/uikit-icons.min.js"></script>
     <link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="img/icon-192x192.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <nav class="uk-navbar-container" uk-navbar>
+    <!-- <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li>
@@ -30,18 +31,17 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <div class="uk-background-primary uk-padding uk-light" id="aboutme">
-      <div  class="uk-text-center">
+    </nav> -->
+    <header class="uk-background-primary uk-padding uk-light" id="aboutme">
+      <div class="uk-text-center">
         <img class="uk-margin-top uk-border-circle" data-src="img/ymgn.jpg" width="200" height="200" uk-img>
-        <article class="uk-article uk-margin-top uk-margin-bottom">
+        <article class="uk-article uk-margin-top uk-margin-bottom uk-child-width-expand@m">
           <h2 class="uk-article-title">山元 賢也(ﾔﾏｹﾞﾝ)</h2>
           <p class="uk-article-meta">2000年6月20日生まれ</p>
           <p class="uk-article-meta">豊田工業高等専門学校 情報工学科 所属</p>
-          <p class="uk-text-lead">
+          <p class="uk-text-lead uk-text-bold uk-text-middle">
             明日から本気出す
           </p>
-          
         </article>
         <div class="uk-flex uk-flex-center uk-flex-middle">
           <a href="https://twitter.com/ymgn_bass" target="_blank" uk-icon="twitter" class="uk-icon-button"></a>
@@ -50,7 +50,7 @@
           <a href="https://www.instagram.com/ymgnittc/" target="_blank" uk-icon="instagram" class="uk-margin-left uk-icon-button"></a>
         </div>
       </div>
-    </div>
+    </header>
     
     <div id="achievements">
       <h2 class="uk-heading-line uk-text-center uk-padding-large"><span>Achievements</span></h2>
