--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <!-- <nav class="uk-navbar-container" uk-navbar>
+    <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li>
@@ -31,12 +31,12 @@
           </li>
         </ul>
       </div>
-    </nav> -->
+    </nav> 
     <header class="uk-background-primary uk-padding uk-light" id="aboutme">
       <div class="uk-text-center">
         <img class="uk-margin-top uk-border-circle" data-src="img/ymgn.jpg" width="200" height="200" uk-img>
         <article class="uk-article uk-margin-top uk-margin-bottom uk-child-width-expand@m">
-          <h2 class="uk-article-title">山元 賢也(ﾔﾏｹﾞﾝ)</h2>
+          <h3 class="uk-article-title">ﾔﾏｹﾞﾝ<br/>Kenya Yamamoto</h3>
           <p class="uk-article-meta">2000年6月20日生まれ</p>
           <p class="uk-article-meta">豊田工業高等専門学校 情報工学科 所属</p>
           <p class="uk-text-lead uk-text-bold uk-text-middle">
