--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>ﾔﾏｹﾞﾝのポートフォリオ</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- UIkit JS -->
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
@@ -56,31 +57,88 @@
     <div id="skills">
       <h2 class="uk-heading-line uk-text-center uk-padding-large"><span>Skills</span></h2>
       <!-- スキル -->
+      <div class="uk-panel uk-padding uk-padding-remove-top uk-padding-remove-bottom">
+        <ul uk-accordion="multiple: true">
+          <li>
+            <a class="uk-accordion-title">Swift <i class="devicon-swift-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>iOSアプリ開発に使用 / RxSwift / Xcode</p>
+              <hr>
+              <p>作品例</p>
+              <a href="https://github.com/Yamagn/Mastlia">Mastlia(マストドンクライアント)</a><br/>
+              <a href="https://github.com/Yamagn/OnigiriAR">おにぎりしゃげき(ARシューティング)</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">JavaScript(TypeScript) <i class="devicon-javascript-plain"></i> <i class="devicon-typescript-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>Ionic / Angular / Vue.js / Node.js / RxJS</p>
+              <hr>
+              <p>作品例</p>
+              <a href="https://github.com/Yamagn/menbam">menbam(ラーメンアルバム)</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">Python <i class="devicon-python-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>機械学習 / Flask / Django / Raspberry Pi</p>
+              <hr>
+              <p>作品例</p>
+              <a href="https://github.com/Yamagn/otodokemono">おとドケモノ(サーバーサイド)</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">C <i class="devicon-c-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>OS / Compiler / FPGA / Algorithm</p>
+              <hr>
+              <p>作品例</p>
+              <a href="https://github.com/Yamagn/HariboteOS">はりぼてOS(ファイルシステムとコマンドを追加)</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">C# <i class="devicon-csharp-plain"></i></a>
+            <div class="uk-accordion-content">
+               <p>Xamarin / Visual Studio</p>
+               <hr>
+               <p>作品例</p>
+               <a href="https://github.com/Yamagn/Food_Connecter">Food Connecter</a>
+               <a href="https://github.com/Yamagn/Twilight">Twilight(Twitterクライアント)</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">Kotlin <i class="devicon-android-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>Androidアプリ開発に使用 / IntelliJ IDEA</p>
+              <hr>
+              <p>作品例</p>
+              <a>ゆりかごマップ</a>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">SQL(NoSQL) <i class="devicon-mysql-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>MySQL / PostgreSQL / mongoDB / SQLite</p>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">Vim <i class="devicon-vim-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>宗教</p>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title">VisualStudio Code <i class="devicon-visualstudio-plain"></i></a>
+            <div class="uk-accordion-content">
+              <p>普段使いのエディタです</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
     
     <div id="history">
       <h2 class="uk-heading-line uk-text-center uk-padding-large"><span>History</span></h2>
-      <!-- 実績 -->
-        <!-- <div class="uk-width-expand" uk-grid>
-          <div class="uk-card uk-card-default uk-width-1-2@m uk-padding">
-            <div class="uk-card-header">
-              <div class="uk-grid-small" uk-grid>
-                <div class="uk-width-expand">
-                  <h3 class="uk-card-title uk-margin-remove-bottom">タイトル</h3>
-                  <p class="uk-text-meta uk-margin-remove-top"><time>fdafdsa</time></p>
-                </div>
-                <div class="uk-width-auto">
-                  <img width="100", height="50" src="img/ymgn.jpg">
-                </div>
-              </div>
-            </div>
-            <div class="uk-card-body">
-              <p>hogehogehoge</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <div class="uk-panel uk-padding uk-padding-remove-top">
       <h3 class="uk-heading-bullet">2016</h3>
       <div>
@@ -112,6 +170,7 @@
           <li><span class="uk-label uk-label-danger">最優秀賞</span>  第4回宇部市オープンデータアプリコンテスト出場</li>
           <li><span class="uk-label uk-label-warning">企業賞</span>  NIT Toba Hackathon出場</li>
           <li><span class="uk-label uk-label-default">優秀賞</span>  第1回システム創成コンテスト出場</li>
+          <li>TwoGate(株)にて技術バイトを開始</li>
         </ul>
       </div>
     </div>
