技術書典について追記

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
           <li><span class="uk-label uk-label-warning">企業賞</span>  NIT Toba Hackathon出場</li>
           <li><span class="uk-label uk-label-default">優秀賞</span>  第1回システム創成コンテスト出場</li>
           <li>TwoGate(株)にて技術バイトを開始</li>
+          <li>技術書典6にて合同誌を頒布</li>
         </ul>
       </div>
     </div>
