--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
           <li><span class="uk-label uk-label-default">優秀賞</span>  第1回システム創成コンテスト出場</li>
           <li>TwoGate(株)にて技術バイトを開始</li>
           <li>技術書典6にて合同誌を頒布</li>
+          <li>SecHack365 表現駆動コースに合格</li>
         </ul>
       </div>
     </div>
