--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <li>TwoGate(株)にて技術バイトを開始</li>
           <li>技術書典6にて合同誌を頒布</li>
           <li>SecHack365 表現駆動コースに合格</li>
-          <li>株式会社ディー・エヌ・エーにてインターン参加</li>
+          <li>株式会社ディー・エヌ・エーにてサマーインターン プロダクト開発コース参加</li>
         </ul>
       </div>
     </div>
