DMMインターン追加

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
           <li>技術書典6にて合同誌を頒布</li>
           <li>SecHack365 表現駆動コースに合格</li>
           <li>株式会社ディー・エヌ・エーにてサマーインターン プロダクト開発コース参加</li>
+          <li>DMM GUILD(合同会社DMM.com インターン)参加</li>
         </ul>
       </div>
     </div>
