卒研内容と卒業を追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <article class="uk-article uk-margin-top uk-margin-bottom uk-child-width-expand@m">
           <h3 class="uk-article-title">ﾔﾏｹﾞﾝ<br/>Kenya Yamamoto</h3>
           <p class="uk-article-meta">2000年6月20日生まれ</p>
-          <p class="uk-article-meta">豊田工業高等専門学校 情報工学科 所属</p>
           <p class="uk-text-lead uk-text-bold uk-text-middle">
             明日から本気出す
           </p>
@@ -179,6 +178,18 @@
           <li>株式会社ディー・エヌ・エーにてサマーインターン プロダクト開発コース参加</li>
           <li>DMM GUILD(合同会社DMM.com インターン)参加</li>
           <li>技術書典7にて技術書を頒布</li>
+        </ul>
+      </div>
+      <h3 class="uk-heading-bullet">2020</h3>
+      <div>
+        <ul class="uk-list uk-list-divider">
+          <li>卒業研究にて「Dockerコンテナの脆弱性診断情報に基づく半自動修正ツールの開発」を行った</li>
+        </ul>
+      </div>
+      <h3 class="uk-heading-bullet">2021</h3>
+      <div>
+        <ul class="uk-list uk-list-divider">
+          <li>豊田工業高等専門学校 情報工学科を卒業</li>
         </ul>
       </div>
     </div>
