技術書典11に関する記述を追加

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
       <div>
         <ul class="uk-list uk-list-divider">
           <li>豊田工業高等専門学校 情報工学科を卒業</li>
+          <li>技術書典11にて「Swift/Combineで始めるリアクティブプログラミング入門」を頒布</li>
         </ul>
       </div>
     </div>
@@ -200,6 +201,14 @@
       <!-- 作ったもの -->
       <div class="uk-panel uk-padding uk-padding-remove-top">
         <ul uk-accordion="multiple: true">
+          <li>
+            <a class="uk-accordion-title">Swift/Combineで始めるリアクティブプログラミング入門</a>
+            <div class="uk-accordion-content">
+              <h4>Combineからリアクティブプログラミングを入門する技術同人誌</h4>
+              <hr>
+              <a href="https://booth.pm/ja/items/3110699" target="_blank">販売ページ - Booth</a>
+            </div>
+          </li>
           <li>
             <a class="uk-accordion-title">SiriKitを遊び倒す本</a>
             <div class="uk-accordion-content">
