色々追加修正

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="uk-text-center">
         <img class="uk-margin-top uk-border-circle" data-src="img/ymgn.jpg" width="200" height="200" uk-img>
         <article class="uk-article uk-margin-top uk-margin-bottom uk-child-width-expand@m">
-          <h3 class="uk-article-title">ﾔﾏｹﾞﾝ<br/>Kenya Yamamoto</h3>
+          <h3 class="uk-article-title">ﾔﾏｹﾞﾝ<br/>
           <p class="uk-article-meta">2000年6月20日生まれ</p>
           <p class="uk-text-lead uk-text-bold uk-text-middle">
             明日から本気出す
@@ -50,8 +50,6 @@
         <div class="uk-flex uk-flex-center uk-flex-middle">
           <a href="https://twitter.com/ymgn_bass" target="_blank" uk-icon="twitter" class="uk-icon-button"></a>
           <a href="https://github.com/yamagn" target="_blank" uk-icon="github" class="uk-margin-left uk-icon-button"></a>
-          <a href="https://www.facebook.com/KenyaYamamoto0620" target="_blank" uk-icon="facebook" class="uk-margin-left uk-icon-button"></a>
-          <a href="https://www.instagram.com/ymgnittc/" target="_blank" uk-icon="instagram" class="uk-margin-left uk-icon-button"></a>
         </div>
       </div>
     </header>
