--- a/apps/mellow_diet/privacy-policy.html
+++ b/apps/mellow_diet/privacy-policy.html
@@ -225,7 +225,7 @@
         <div class="contact-info">
             <p>本プライバシーポリシーに関するご質問やお問い合わせは、以下までご連絡ください。</p>
             <p style="margin-top: 16px; margin-bottom: 0;">
-                <strong>メールアドレス:</strong> [your-email@example.com]
+                <strong>メールアドレス:</strong> ymgn2000@gmail.com
             </p>
         </div>
 
